--- a/course_website/assigments.css
+++ b/course_website/assigments.css
@@ -73,11 +73,13 @@ html, body {
   }
   .leftnavigation span {
     background: rgb(114, 95, 160);
-    color: #fff
+    color: #fff;
+    border-radius : 5px;
   }
   #dark-mode-toggle:checked ~ .leftnavigation span{
     background: rgb(196, 194, 199);
-    color: #1b1919
+    color: #1b1919;
+    border-radius : 5px;
 }
 
 
